# niodoo-tcs

./: .coderabbit-extension.json  .coderabbit.yaml  .env.example  .env.production  .gitignore  ACTUAL_RESULTS.md  AGENT8_IMPLEMENTATION_SUMMARY.txt  AGENT8_INDEX.md  ARCHITECTURE_ALIGNMENT_REPORT.md  ASYNC_PIPELINE_BUILD_GUIDE.md  ASYNC_PIPELINE_COMPLETION_SUMMARY.txt  ASYNC_PIPELINE_QUICKSTART.md  ASYNC_PIPELINE_README.md  ASYNC_PIPELINE_VALIDATION_REPORT.md  ATTRIBUTIONS.md  AUDIO_FIX_README.md  AUTO_START_SETUP.md  BACKEND_CONNECTION_FIX_COMPLETE.md  BACKEND_FIX_COMPLETE.md  BACKEND_FIX_SUMMARY.md  BEELINK_INFRASTRUCTURE_REPORT.md  BENCHMARK_ANALYSIS.md  CARGO_AVAILABLE_DIMENSION_MIGRATION_COMPLETE.md  CHANGELOG.md  CIRCUIT_BREAKER_FIX_SUMMARY.md  CODEX_SETUP_GUIDE.md  CODE_LOCATION_MAP.md  CODE_QUALITY_FIXES.md  CODE_REVIEW_REPORT.md  COMPILATION_FIXED.md  COMPILATION_FIX_SUMMARY.md  COMPLETE_SYSTEM_MERMAID.md  COMPLETE_SYSTEM_SYNTHESIS.md  CONNECT_TO_BEELINK.sh  CONSCIOUSNESS_COMPASS_IMPLEMENTATION.md  CONTRIBUTING.md  CURATOR_INTEGRATION_COMPLETE.md  CURATOR_INTEGRATION_PLAN.md  CURATOR_MISSING_REPORT.md  CURSOR_2025_OPTIMIZATION_COMPLETE.md  (+181 more)
EchoMemoria/src/: Cargo.toml  pipeline.rs
bullshitdetector/: Cargo.toml  Dockerfile.gpu  sample.rs
bullshitdetector/src/: constants.rs  creep.rs  dataset.rs  detect.rs  feeler.rs  finetune_prompt.rs  gp.rs  graph.rs  hyperbolic.rs  integrate.rs  lib.rs  lsp.rs  main.rs.disabled  memory.rs  qwen_client.rs  rag.rs  suggest.rs  topology_engine.rs
constants_core/: Cargo.toml
constants_core/src/: consciousness.rs  consciousness_engine.rs  gaussian.rs  lib.rs  mathematical.rs  memory.rs  model.rs  models.rs  monitoring.rs  network.rs  performance.rs  processing.rs  sampling.rs  topology.rs  visualization.rs
cpp-qt-brain-integration/: CMakeLists.txt  README.md  test-build.sh  test-gui.sh  test_brain_bridge.cpp  test_phase4_integration.cpp
cpp-qt-brain-integration/include/: BrainSystemBridge.h  EmotionalAIManager.h  MainWindow.h  NeuralNetworkEngine.h  NiodoPerformanceOptimizer.h  RustBrainBridge.h  ShimejiConsciousnessWidget.h
cpp-qt-brain-integration/src/: BrainSystemBridge.cpp  EmotionalAIManager.cpp  MainWindow.cpp  NeuralNetworkEngine.cpp  NiodoPerformanceOptimizer.cpp  RustBrainBridge.cpp  main.cpp
curator_executor/: Cargo.toml  FIXED_STATUS.md  OPTIMIZATION_SUMMARY.md  README.md  config.toml  deploy_optimized.sh  run_learning_loop.sh
curator_executor/proto/: curator_executor.proto
curator_executor/src/: hardware_config.rs  lib.rs  main.rs  main_optimized.rs  optimizations.rs
curator_executor/tests/: test_optimizations.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: equivariant_layer.rs
niodoo-core/: Cargo.toml
niodoo-core/.cargo/: config.toml
niodoo-core/src/: advanced_memory_retrieval.rs  ai_memory_adapter.rs  consciousness.rs  consciousness_compass.rs  consciousness_constants.rs  consciousness_state_inversion.rs  dream_state_processor.rs  dual_mobius_gaussian.rs  engines.rs  enhanced_memory_management.rs  error.rs  events.rs  groks_memory_retriever.rs  kv_cache.rs  lib.rs  memory_management.rs  memory_optimization_engine.rs  memory_sync_master.rs  mobius_consciousness_identifiers.rs  mobius_flip_integration.rs  mobius_gaussian_framework.rs  optimized_memory_management.rs  personal_memory.rs  phase6_config.rs  phase6_integration.rs  phase7_consciousness_psychology.rs  qwen_curator.rs  qwen_integration.rs  rag_integration.rs  real_memory_bridge.rs  real_mobius_consciousness.rs  sparse_gaussian_processes.rs  topology_engine.rs  training_data_export.rs  transformer_memory.rs  true_nonorientable_memory.rs  vllm_bridge.rs
niodoo-tcs-bridge/: Cargo.toml
niodoo-tcs-bridge/examples/: simple_integration_test.rs
niodoo-tcs-bridge/src/: embedding_adapter.rs  lib.rs  pipeline.rs
niodoo_integrated/: Cargo.toml  Dockerfile.ring-fix  debug_build.sh  emotion_training_data_mock.json  niodoo_mini_summary.json  niodoo_rut_gauntlet_summary.json  niodoo_test_summary.json  rut_gauntlet_config.toml
niodoo_integrated/src/: compass.rs  embedding.rs  emotional_mapping.rs  empathy_network.rs  erag.rs  generation.rs  learning.rs  lib.rs  main.rs  tokenizer.rs  types.rs
niodoo_real_integrated/: Cargo.toml  README.md  build.rs
niodoo_real_integrated/benches/: niodoo_real_bench.rs
niodoo_real_integrated/docs/: FEDERATED_INTEGRATION.md  FEDERATED_INTEGRATION_SUMMARY.md  QLORA_DEMO.md
niodoo_real_integrated/examples/: argo_istio_blueprint.rs  resilience.rs  topology_baseline.rs  topology_eval.rs
niodoo_real_integrated/logs/: fix10-mcts-adaptive.md  fix3-futures-futureext.md  fix5-lora-safetensors.md  fix6-api-retry.md  fix7-rate-limits.md
niodoo_real_integrated/results/: topo_proof.csv
niodoo_real_integrated/src/: api_clients.rs  api_clients_validation.rs  benchmark.rs  compass.rs  config.rs  config.rs.full  consonance.rs  conversation_log.rs  curator.rs  curator_parser.rs  data.rs  embedded_qdrant.rs  embedding.rs  emotional_graph.rs  erag.rs  federated.proto  (+33 more)
src/: AIDNA.rs  Cargo.toml  Cargo_minimal.toml  Cargo_minimal_final.toml  Cargo_minimal_ultra.toml  FRESH_BULLSHIT_SCAN_RESULTS.json  advanced_async_patterns.rs  advanced_caching.rs  advanced_empathy.rs  advanced_memory_retrieval.rs  advanced_visualization.rs  ai_inference.rs  ai_memory_adapter.rs  aidna.rs  anti_insanity_loop.rs  api_integration.rs  batch_optimization.rs  bert_chat.rs  bert_emotion.rs  brain.rs  brain_bridge_ffi.rs  brains.rs  build.rs  build.rs.disabled  bullshit_buster_demo.rs  candle_qwen.rs  claude_reflection.rs  compass.rs  consciousness.rs  consciousness_compass.rs  consciousness_constants.rs  consciousness_data.json  consciousness_demo.rs  consciousness_metrics.rs  consciousness_pipeline_orchestrator.rs  consciousness_qt_signals.rs  consciousness_safetensors.rs  consciousness_state_inversion.rs  continual_learning.rs  convert_bert_to_onnx.py  (+154 more)
tcs-code-tools/: Cargo.toml
tcs-consensus/: Cargo.toml
tcs-core/: Cargo.toml
tcs-knot/: Cargo.toml
tcs-ml/: Cargo.toml
tcs-pipeline/: Cargo.toml
tcs-tda/: Cargo.toml
tcs-tqft/: Cargo.toml
(+1345 files in other folders)
