[workspace]
members = [
    "constants_core",
    "niodoo-core",
    "tcs-core",
    "tcs-tda",
    "tcs-ml",
    "tcs-knot",
    "tcs-tqft",
    "tcs-pipeline",
    "tcs-consensus",
    "niodoo_real_integrated",
]
resolver = "2"

# Workspace-wide package metadata
[workspace.package]
authors = ["Jason Van Pham <jasonvanpham@niodoo.com>"]
edition = "2024"
rust-version = "1.87"
license-file = "LICENSE"
version = "0.1.0"

# Core dependencies shared across workspace
[workspace.dependencies]
ndarray = { version = "0.15", features = ["rayon", "blas", "serde"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
ort = { version = "1.16", default-features = false, features = ["load-dynamic", "half"] }
tokenizers = { version = "0.20", default-features = false, features = ["http", "onig"] }
hf-hub = "0.3"
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
bincode = "1.3"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
sysinfo = "0.30"
git2 = "0.21"
syn = { version = "2.0", features = ["full", "visit"] }
log = "0.4"
env_logger = "0.11"
axum = "0.7"
rayon = "1.10"
lru = "0.16"
petgraph = "0.8"
num_cpus = "1.16"
dashmap = "6.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
mimalloc = "0.1"
num-complex = "0.4"
usearch = "2.21.0"
once_cell = "1.19"
cudarc = "0.1"
safetensors = "0.4"
half = "2.4.0"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
prost = { version = "0.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3"
serde_yaml = "0.9"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2.5"
tempfile = "3.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
sha2 = "0.10"
pyo3 = { version = "0.22" }
tonic = "0.12"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"
prometheus = "0.13"
lazy_static = "1.4"
plotters = "0.3.7"

[workspace.lints.rust]
unsafe_code = "deny"
unused_qualifications = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

