[package]
name = "bullshitdetector"
version = "1.0.0"
edition = "2024"

# Disabled test binary - incomplete dependencies
# [[bin]]
# name = "bullshitdetector"
# path = "src/main.rs"

[[bin]]  
name = "topology_benchmark"
path = "src/bin/topology_benchmark.rs"


[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.40", features = ["full"] }
nalgebra = "0.34"
candle-core = "0.9.1"
candle-nn = "0.9.1"  
candle-transformers = "0.9.1"
tokenizers = "0.20"
rayon = "1.10"
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.24"
sled = "0.34"
tera = "0.1"
git2 = "0.18"
prometheus = "0.13"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
chrono = "0.4"
bincode = "1.3"
tower-lsp = "0.20"
tower = "0.4"
hf-hub = "0.3"
candle-examples = "0.9.1"
itertools = "0.13"
ndarray = "0.15"
linfa = "0.7"
linfa-clustering = "0.7"
linfa-preprocessing = "0.7"
topology_core = { path = "../topology_core" }

[dev-dependencies]
criterion = "0.5"