[workspace]

[package]
name = "curator_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for vLLM API (avoid rustls/native-tls conflicts; use blocking feature only)
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking"] }

# Vector database
qdrant-client = "0.11"

# Async runtime and networking
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13", default-features = false, features = ["transport", "codegen", "prost"] }
prost = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }

# For QLoRA fine-tuning
safetensors = "0.4"
hf-hub = "0.3"

# Random utilities
rand = "0.8"

[build-dependencies]
tonic-build = "0.13"