[package]
name = "niodoo_integrated"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "niodoo_integrated"
path = "src/main.rs"

[[bin]]
name = "rut_gauntlet"
path = "src/bin/rut_gauntlet.rs"

[[bin]]
name = "profile_mini"
path = "src/bin/profile_mini.rs"

[[bin]]
name = "profile_components"
path = "src/bin/profile_components.rs"

[[bin]]
name = "speed_test"
path = "src/bin/speed_test.rs"

[[bin]]
name = "niodoo_mini_test"
path = "src/bin/niodoo_mini_test.rs"

[[bin]]
name = "chaos_validation"
path = "src/bin/chaos_validation.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
nalgebra = "0.32"
prometheus = "0.13"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# NUCLEAR FIX - NO RING ASSEMBLY BULLSHIT
reqwest = { version = "0.11", features = ["json"], default-features = false }
# REAL QDRANT IMPLEMENTATION
qdrant-client = "1.9"
plotters = "0.3"
config = "0.14"
actix = "0.13"

# NUCLEAR OPTION: Build environment overrides
[profile.dev]
lto = false
debug = 1
opt-level = 1

[profile.release]
lto = false
opt-level = 2